# api-v1-sippe

./: .dockerignore  .gitignore  Dockerfile-develop  Dockerfile-keycloak  Dockerfile.Develop  README.md  compose.yaml  db.sqlite3  deployment_cert.der  docker-compose.yml  postgres-server.session.sql  pyproject.toml  rabbit_cofig_backup_1_0_0.json  requirements.txt  sippe.pem
.ebextensions/: django.config
.github/: FUNDING.yml
CPU_SERVER/: compose.yaml
Mobile/: secedu-app-flutter.json
Modelo Redis e Keycloak/: Dockerfile.Keycloak
Modelo Redis e Keycloak HTML/: docker-compose.yml
Pesquisas/: postgres-server.session.sql
SERVER/: COMANDOS.md  Dockerfile-Develop  commandos.txt  compose.yaml  ngrok.yml  rabbit_2023-11-6.json  rabbit_SecEdu_2023-10-21.json  rabbit_new_Files_2023-10-26.json
Services/: env.txt
api/: .gitignore  Dockerfile.Keycloak  docker-compose.yml  requirements.txt  setup.py
app/: requirements.txt
core/: settings.py
face_rec_secedu/: docker-compose.yml  face-api.postman_collection.json
secedu-api-faces/: README.md
secedu-celery-worker/: Dockerfile  README.md  docker-compose.yaml
secedu-dj-api/: .dockerignore  Dockerfile  Dockerfile.Django  Dockerfile.Keycloak  bkp_cadastros.json  cadastros.json  commandos.txt  docker-compose.yml  entrypoint.sh  requerimentos.txt  requirements.txt  setup.py
secedu-django-api/: .dockerignore  .pre-commit-config.yaml  Dockerfile  beat-scheduler.sh  commandos.txt  docker-compose.yml  entrypoint.sh  manage.py  requirements.txt  requiremets.txt  setup.py  tasks-workers.sh
secedu-fk-task/: Dockerfile
(+510 files in other folders)
