[tool.poetry]
name = "sippe-api-v1"
version = "0.1.0"
description = ""
authors = ["Edson L B Filho <edcastanha@gmail.com>"]
readme = "README.md"
packages = [{include = "sippe_api_v1"}]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.2"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
Django = "4.1.9"
gunicorn = "20.1.0"
idna = "3.4"
load-dotenv = "0.1.0"
psycopg2 = "2.9.6"
python-dotenv = "1.0.0"
requests = "2.30.0"
sqlparse = "0.4.4"
tzdata = "2023.3"
urllib3 = "2.0.2"
whitenoise = "6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
