[tool.poetry]
name = "api-v1-sippe"
version = "0.1.0"
description = ""
authors = ["Edson L B Filho <edcastanha@gmail.com>"]
readme = "README.md"
packages = [{include = "api_v1_sippe"}]

[tool.poetry.dependencies]
asgiref = "3.5.2"
Django = "4.1.9"
djangorestframework = "3.14.0"
gunicorn = "20.1.0"
Pillow = "9.5.0"
psycopg2 = "2.9.6"
python-dotenv = "1.0.0"
pytz = "2023.3"
sqlparse = "0.4.4"
tzdata = "2023.3"
whitenoise = "6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
